--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 <body>
 
   <h1>🎉 Birthday Celebration 🎂</h1>
-  <a href="card.html">
+  <a href="/Card/card.html">
     <button>Button 1</button>
   </a>
-  <a href="index.html">
+  <a href="Celebration/index.html">
     <button>Button 2</button>
   </a>
 
