--- a/Card/index.html
+++ b/Card/index.html
@@ -7,7 +7,7 @@
 	<meta name="HandheldFriendly" content="true">
 	<meta name="theme-color" content="#F26B38">
 
-	<title>Happy Birthday | Siddhant Sharma</title>
+	<title>Tabs</title>
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -23,14 +23,20 @@
 		<div id="card-inside">
 			<div class="wrap">
 				<center><p class="animated infinite wobble"><b><u>Happy Birthday!</b></u></p><center>
-				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco &nbsp;<i class="em-svg em-blush"></i></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-				 </p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
+				<p> Twenty candles, a blaze so bright, <br>
+					Best friend's birthday, pure delight. <br>
+					Through the years, our bond's refined,<br>
+					Happy birthday, friend of a kind!😋</p>
+				<p>Hehe! Maybe all ur wishes come true. Epic Job mile😋 Epic banda mile🥰 Epic life hoye😚<br>
+					Dekh you have entered your Actual Adult life now!!😭💪 <br> Khatam teri Teenage life 😁 <br>
+					Live it to fullest and enjoyyy ✨💅👑<br>
+					Happiest Birthday 🥳🎉🎈🎁🎂
+				</p><!-- <p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p> -->
 			</div>
 		</div>
 		<div id="card-front">
 			<div class="wrap">
-				<h1 class="animated infinite swing">Happy Birthday Love</h1>
+				<h1 class="animated infinite swing">Happy Birthday Chingu</h1>
 				<div class="cake_and_velas">
 					<div class="velas">
 						<div class="fuego"></div>
@@ -62,14 +68,14 @@
 					</svg>
 				</div>
 			</div>
-			<button id="open" data-balloon="Click to Open Card!" data-balloon-length="medium" data-balloon-pos="left" data-balloon-visible>&gt;
+			<button id="open" data-balloon="Idher dabba !!" data-balloon-length="medium" data-balloon-pos="left" data-balloon-visible>&gt;
 			</button>
 			<button id="close" data-balloon="! bɿɒɔ ɘƨolɔ oɈ ʞɔilƆ" data-balloon-length="medium" data-balloon-pos="left" data-balloon-visible>&lt;
 			</button>
 			<div class="card-front_inside">
 				<br> <br> <br>
 				<div class="polaroid">
-					<div class="img" style="background-image: url('https://static.vecteezy.com/system/resources/previews/000/608/881/original/heart-flat-icon-vector.jpg')"></div>
+					<div class="img" style="background-image: url('img.jpg')"></div>
 				</div>
 				<div class="shadow"></div>
 			</div>
