--- a/Celebration/index.html
+++ b/Celebration/index.html
@@ -35,25 +35,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h4 style="color:#F2B300;">Happiest</h4>
+    	<!-- <h4 style="color:#F2B300;">Happiest</h4> -->
     </div>
     <div class="balloons text-center" id="b2">
-    	<h4 style="color:#0719D4;">Birthday</h4>
+    	<!-- <h4 style="color:#0719D4;">Birthday</h4> -->
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h4 style="color:#D14D39;">Happy</h4>
+    	<!-- <h4 style="color:#D14D39;">Happy</h4> -->
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h4 style="color:#8FAD00;">Birthday</h4>
+    	<!-- <h4 style="color:#8FAD00;">Birthday</h4> -->
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h4 style="color:#8377E4;">My Dear</h4>
+    	<!-- <h4 style="color:#8377E4;">My Dear</h4> -->
     </div>
     <div class="balloons text-center" id="b6">
-    	<h4 style="color:#99C96A;">Friend</h4>
+    	<!-- <h4 style="color:#99C96A;">Friend</h4> -->
     </div>
     <div class="balloons text-center" id="b7">
-    	<h4 style="color:#20CFB4;">Soham</h4>
+    	<!-- <h4 style="color:#20CFB4;">Soham</h4> -->
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -123,34 +123,21 @@
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>..and travelling daily to Hadapsar :)</p>
-				<p>I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday</p>
+				<p>a very happy birthday Tanvi</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
+					<button class="btn btn-primary" id="turn_on">Are Andhera kyu hai <br> Light laga</button>
+					<button class="btn btn-primary" id="play">Bday Song?</button>
+					<button class="btn btn-primary" id="bannar_coming">Bday ka Banner laya jaye</button>
+					<button class="btn btn-primary" id="balloons_flying">Balloons bhi lagao</button>
+					<button class="btn btn-primary" id="cake_fadein">Cake laya jaaye😋</button>
+					<button class="btn btn-primary" id="light_candle"> Candle Jhala🕯️ </button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday🥳🥳</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
