--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-color: #f8e4c1; /* Light peach background */
+      background: linear-gradient(to right, #ffcc99, #ff6f61); /* Gradient background */
       font-family: 'Arial', sans-serif;
+      overflow: hidden; /* Hide potential horizontal scrollbar */
     }
 
     h1 {
-      font-size: 36px;
-      margin-bottom: 20px;
-      color: #ff6f61; /* Coral color for the title */
+      font-size: 50px;
+      margin-bottom: 30px;
+      color: black;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Text shadow for better readability */
     }
 
     button {
@@ -27,26 +29,27 @@
       font-size: 18px;
       margin: 10px;
       cursor: pointer;
-      background-color: #ff6f61; /* Coral color for the button */
+      background-color: #4a24f3; /* Coral color for the button */
       color: #fff; /* White text */
       border: none;
       border-radius: 5px;
       transition: background-color 0.3s ease;
+      box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Button shadow for depth */
     }
 
     button:hover {
-      background-color: #ff4d4d; /* Darker coral color on hover */
+      background-color: #14006d; /* Darker coral color on hover 🎂*/
     }
   </style>
 </head>
 <body>
 
-  <h1>🎉 Birthday Celebration 🎂</h1>
-  <a href="/Card/card.html">
-    <button>Button 1</button>
+  <h1>🎉 Anneyong 🎉</h1> 
+  <a href="Card/index.html">
+    <button>Yeh Gift Card</button>
   </a>
   <a href="Celebration/index.html">
-    <button>Button 2</button>
+    <button>Lets Celebrate🥳</button>
   </a>
 
   <script>
